# extend-official

chess/: Cargo.toml  README.md
chess/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs  utils_chess.rs
chess/src/processor/: init_board.rs  register.rs  start_game.rs  vote.rs
cli/: package-lock.json  package.json
cli/src/: extend-cli.ts  mint.sh  register.sh
cli/src/helpers/: transactions.ts  various.ts
client/: package-lock.json  package.json
client/public/: censor.json
client/src/: index.css  index.tsx
client/src/actions/: accept_offer.ts  accept_rent.ts  change_color.ts  change_offer.ts  get_vouchers.ts  index.ts  init_frame.ts  init_neighborhood_metadata.ts  init_space_metadata.ts  init_voucher_system.ts  make_editable.ts  metadata.ts  send_transaction.ts  set_rent.ts  update_neighborhood_metadata.ts
client/src/components/: Activity.tsx  ConnectButton.tsx  Message.tsx  index.ts
client/src/constants/: config.ts
client/src/contexts/: ConnectionContext.tsx  InboxContext.tsx  index.tsx
client/src/helpersMint/: transactions.ts
client/src/utils/: borsh.ts  gif.js  highlight.ts  loading.tsx  notifications.tsx  objectSet.ts  rainbow.ts  utils.ts
color/src/: instruction.rs  processor.rs  state.rs
color/src/processor/: TEMP_make_time_cluster.rs  change_color.rs  init_frame.rs  make_editable.rs  tmp_change_editable_timestamp.rs
js/: package.json
js/pages/: index.tsx
js/styles/: Home.module.css  globals.css
space-metadata/: package.json
space/src/: error.rs  instruction.rs  processor.rs  state.rs
(+19 files in other folders)
